Add 'preload.js' for API integration security and changed 'renderer.js' >> 'renderer.ts' in exchange for TypeScript compilation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>File Compressu</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="renderer.js" defer></script>
+    <script src="dist/renderer.js" defer></script>
     <link rel="stylesheet" href="dist/styles.css" />
   </head>
 <body class="bg-gray-900 text-white flex items-center justify-center h-screen">
