--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>File Compressu</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="dist/renderer.js" defer></script>
+    <script src="renderer.js" defer></script>
     <link rel="stylesheet" href="dist/styles.css" />
   </head>
 <body class="bg-gray-900 text-white flex items-center justify-center h-screen">
@@ -22,6 +22,14 @@
       px-4                     /* small side padding so nothing touches edge */
     "
   >
+    <!-- Download section - initially hidden -->
+    <div id="download-section" class="w-full bg-gray-800 rounded-lg p-5 hidden">
+      <h2 class="text-xl font-bold mb-3">Compressed Files Ready!</h2>
+      <div id="compression-results" class="space-y-3">
+        <!-- Results will be inserted here dynamically -->
+      </div>
+    </div>
+
     <!-- file upload -->
     <label
       for="dropzone-file"
