Add variables and Default Behavior prevention

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         class="w-full bg-gray-800 rounded-lg p-5 hidden"
       >
         <h2 class="text-xl font-bold mb-3">Compressed Files Ready!</h2>
-        <div id="compression-results" class="space-y-3">
+        <ul id="compression-results" class="space-y-3">
           <!-- Results will be inserted here dynamically -->
-        </div>
+        </ul>
       </div>
 
       <!-- file upload -->
