--- a/index.html
+++ b/index.html
@@ -13,14 +13,8 @@
     <!-- main container -->
     <div
       class="flex flex-col items-center gap-y-8 w-full sm:w-11/12 md:w-3/4 lg:w-1/2 xl:w-2/5 px-4"
-      <!--
-      Download
-      section
-      -
-      initially
-      hidden
-      --
-    >
+    >  <!-- Fixed missing closing angle bracket -->
+      <!-- Download section - initially hidden -->
       <div
         id="download-section"
         class="w-full bg-gray-800 rounded-lg p-5 hidden"
