--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Keep the Tailwind CDN as requested -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="dist/styles.css">
-    <script src="dist/logic/renderer.js" defer></script>
+    <script type="module" src="dist/logic/renderer.js" defer></script>
   </head>
   <body
     class="bg-gray-900 text-white flex items-center justify-center h-screen"
@@ -29,6 +29,7 @@
       <!-- file upload -->
       <label
         for="dropzone-file"
+        id="dropzone"
         class="flex flex-col items-center justify-center w-full h-64 border-2 border-dashed border-gray-300 rounded-lg bg-gray-50 dark:bg-gray-700 dark:border-gray-600 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:border-gray-500 cursor-pointer text-gray-700 dark:text-gray-300"
       >
         <div class="flex flex-col items-center justify-center pt-5 pb-6">
@@ -57,7 +58,7 @@
 
       <!-- compress button -->
       <button
-        id="compress"
+        id="compressor"
         class="w-full sm:w-auto bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded"
       >
         Compress
