Change compression logic

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>File Compressu</title>
     <!-- Keep the Tailwind CDN as requested -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="dist/styles.css">
+    <link rel="stylesheet" href="dist/styles.css" />
     <script type="module" src="dist/logic/renderer.js" defer></script>
   </head>
   <body
