--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>File Compressu</title>
-    <!-- Keep the Tailwind CDN as requested -->
+    <!-- Keep the Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="dist/styles.css" />
     <script type="module" src="dist/logic/renderer.js" defer></script>
