Add scripts for creating dist, builbuilding and for production

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,8 @@
     <title>File Compressu</title>
     <!-- Keep the Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="dist/styles.css" />
-    <script type="module" src="dist/logic/renderer.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
+    <script type="module" src="logic/renderer.js" defer></script>
   </head>
   <body
     class="bg-gray-900 text-white flex items-center justify-center h-screen"
